--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ceros/quill-paste-smart",
-  "version": "1.5.2",
+  "name": "quill-paste-smart",
+  "version": "1.4.10",
   "description": "Quill Extension to paste only supported HTML",
   "main": "dist/quill-paste-smart.js",
   "devDependencies": {
