--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill-paste-smart",
+  "name": "@ceros/quill-paste-smart",
   "version": "2.0.0-fork.0",
   "description": "Quill Extension to paste only supported HTML",
   "main": "dist/quill-paste-smart.js",
